--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(libCTF)
+project(CTF)
 
 # shared - not implemented
 # add_library(CTF-shared SHARED libCTF/Source/CTF.c libCTF/Source/CTF.h)
@@ -11,14 +11,7 @@ add_library(CTF-static STATIC libCTF/Source/CTF.c libCTF/Source/CTF.h)
 target_compile_definitions(CTF-static PUBLIC LIBCTF_STATIC)
 target_include_directories(CTF-static PUBLIC libCTF/Source)
 
-add_executable(Test CTFTest/Source/Main.c)
-target_link_libraries(Test PRIVATE CTF-static)
-
-add_subdirectory(CTFTest/Libs/SDL)
-target_link_libraries(Test PRIVATE SDL2-static)
-target_include_directories(Test PRIVATE CTFTest/Libs/SDL/include CTFTest/Libs/stb)
-
 add_executable(CTFCreate CTFCreate/Source/Main.c)
 target_link_libraries(CTFCreate PRIVATE CTF-static)
-target_include_directories(CTFCreate PRIVATE CTFTest/Libs/stb)
+target_include_directories(CTFCreate PRIVATE CTFCreate/Libs/stb)
 target_link_libraries(CTFCreate PRIVATE m)
